fix: Hide markers on Firefox & Safari

--- a/site/css/main.css
+++ b/site/css/main.css
@@ -241,6 +241,14 @@ details summary {
   display: inline-block;
 }
 
+details summary::marker {
+  content: "";
+}
+
+details summary::-webkit-details-marker {
+  display: none;
+}
+
 details summary h2 {
   @apply mb-0 mt-2;
 }
